fix names design

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                         <div class="card-body content">
                                             <h5 class="card-title title text-dark mb-0">Glam Reborn</h5>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
-                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>هتون بندر اليزيدي</span>
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>هتون اليزيدي</span>
                                                 <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
                                             </div>
                                         </div>
@@ -524,7 +524,7 @@
                                         <div class="card-body content">
                                             <h5 class="card-title title text-dark mb-0">SARAA&amp;THARAA</h5>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
-                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>هوازن نواف الدلبحي / عروب محمد البريدي</span>
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>هوازن الدلبحي / عروب البريدي</span>
                                                 <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
                                             </div>
                                         </div>
@@ -546,7 +546,7 @@
                                         <div class="card-body content">
                                             <h5 class="card-title title text-dark mb-0">مجموعة البيذانة</h5>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
-                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>لينا عبدالله الغامدي</span>
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>لينا الغامدي</span>
                                                 <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
                                             </div>
                                         </div>
@@ -568,7 +568,7 @@
                                         <div class="card-body content">
                                             <h5 class="card-title title text-dark mb-0">Lav&egrave;h</h5>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
-                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>مريم جمال الصيعري / رنا عبدالله الحماد</span>
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>مريم الصيعري / رنا الحماد</span>
                                                 <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
                                             </div>
                                         </div>
@@ -590,7 +590,7 @@
                                         <div class="card-body content">
                                             <h5 class="card-title title text-dark mb-0">Éclav</h5>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
-                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>أثير مجرشي / ديم آل محمد</span>
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>أثير مجرشي / ديم محمد</span>
                                                 <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
                                             </div>
                                         </div>
@@ -678,7 +678,7 @@
                                         <div class="card-body content">
                                             <h5 class="card-title title text-dark mb-0">Sarmadan</h5>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
-                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>الدانه بن فهيد / لجين آل زاحم</span>
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>الدانه فهيد / لجين زاحم</span>
                                                 <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
                                             </div>
                                         </div>
@@ -722,7 +722,7 @@
                                         <div class="card-body content">
                                             <h5 class="card-title title text-dark mb-0">أرابيسك</h5>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
-                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>الهنوف آل حمد / وسن آل روق</span>
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>الهنوف حمد / وسن روق</span>
                                                 <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
                                             </div>
                                         </div>
@@ -744,7 +744,7 @@
                                         <div class="card-body content">
                                             <h5 class="card-title title text-dark mb-0">أرابيسك II</h5>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
-                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>الهنوف آل حمد / وسن آل روق</span>
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>الهنوف حمد / وسن روق</span>
                                                 <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
                                             </div>
                                         </div>
@@ -766,7 +766,7 @@
                                         <div class="card-body content">
                                             <h5 class="card-title title text-dark mb-0">حنايا</h5>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
-                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>ليان خالد الشبرمي</span>
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>ليان الشبرمي</span>
                                                 <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
                                             </div>
                                         </div>
@@ -788,7 +788,7 @@
                                         <div class="card-body content">
                                             <h5 class="card-title title text-dark mb-0">رواية الراية</h5>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
-                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>سارة آل ظافر / رهام الرويلي</span>
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>سارة ظافر / رهام الرويلي</span>
                                                 <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
                                             </div>
                                         </div>
@@ -854,7 +854,7 @@
                                         <div class="card-body content">
                                             <h5 class="card-title title text-dark mb-0">سِجفه</h5>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
-                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>سارة العتيق</span>
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>سارة ظافر</span>
                                                 <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
                                             </div>
                                         </div>
@@ -920,7 +920,7 @@
                                         <div class="card-body content">
                                             <h5 class="card-title title text-dark mb-0">أهزوجة</h5>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
-                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>أمجاد أحمد باوزير / شريفه منصور المبارك</span>
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>أمجاد باوزير / شريفه المبارك</span>
                                                 <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
                                             </div>
                                         </div>
@@ -986,7 +986,7 @@
                                         <div class="card-body content">
                                             <h5 class="card-title title text-dark mb-0">قّوام</h5>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
-                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>نوره خليل القحطاني / ليان خالد باقازي</span>
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>نوره القحطاني / ليان باقازي</span>
                                                 <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
                                             </div>
                                         </div>
