--- a/project-baydhana.html
+++ b/project-baydhana.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="مجموعة البيذانة تعيد صياغة زخارف الأبواب النجدية في أزياء Smart Casual تعكس أناقة المرأة السعودية المعاصرة.">
         <meta name="keywords" content="البيذانة، أزياء سعودية، زخارف نجدية، Smart Casual">
-        <meta name="author" content="لينا عبدالله الغامدي">
+        <meta name="author" content="لينا الغامدي">
 
         <link rel="shortcut icon" href="assets/images/favicon.ico">
         <link href="assets/libs/tiny-slider/tiny-slider.css" rel="stylesheet">
@@ -157,7 +157,7 @@
                                 </div>
                                 <div class="flex-1 content text-start">
                                     <h6 class="title fw-bold mb-0">اسم المصممة</h6>
-                                    <span class="text-primary">لينا عبدالله الغامدي</span>
+                                    <span class="text-primary">لينا الغامدي</span>
                                 </div>
                             </div>
                             <div class="d-flex contact-detail align-items-center mt-3 justify-content-center">
