--- a/project-glam-reborn.html
+++ b/project-glam-reborn.html
@@ -6,8 +6,8 @@
         <title>Glam Reborn - تفاصيل المشروع</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Glam Reborn يعيد تعريف البريق بأنوثة واثقة تعرف نفسها جيدًا وتعلن حضورها.">
-        <meta name="keywords" content="Glam Reborn، تصميم أزياء، هتون بندر اليزيدي">
-        <meta name="author" content="هتون بندر اليزيدي">
+        <meta name="keywords" content="Glam Reborn، تصميم أزياء، هتون اليزيدي">
+        <meta name="author" content="هتون اليزيدي">
 
         <link rel="shortcut icon" href="assets/images/favicon.ico">
         <link href="assets/libs/tiny-slider/tiny-slider.css" rel="stylesheet">
@@ -164,7 +164,7 @@
                                 </div>
                                 <div class="flex-1 content text-start">
                                     <h6 class="title fw-bold mb-0">اسم المصممة</h6>
-                                    <span class="text-primary">هتون بندر اليزيدي</span>
+                                    <span class="text-primary">هتون اليزيدي</span>
                                 </div>
                             </div>
                             <div class="d-flex contact-detail align-items-center mt-3 justify-content-center">
