--- a/project-laveh.html
+++ b/project-laveh.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Lav&egrave;h يقدم تصاميم لمضيفات الطيران تمزج الانضباط والأناقة بتدرجات اللافندر القابلة للتحول من زي رسمي إلى إطلالة سهرة.">
         <meta name="keywords" content="Lav&egrave;h، مضيفات طيران، أزياء سعودية، زي رسمي">
-        <meta name="author" content="مريم جمال الصيعري، رنا عبدالله الحماد">
+        <meta name="author" content="مريم الصيعري، رنا الحماد">
 
         <link rel="shortcut icon" href="assets/images/favicon.ico">
         <link href="assets/libs/tiny-slider/tiny-slider.css" rel="stylesheet">
@@ -157,7 +157,7 @@
                                 </div>
                                 <div class="flex-1 content text-start">
                                     <h6 class="title fw-bold mb-0">أسماء المصممتين</h6>
-                                    <span class="text-primary">مريم جمال الصيعري · رنا عبدالله الحماد</span>
+                                    <span class="text-primary">مريم الصيعري · رنا الحماد</span>
                                 </div>
                             </div>
                             <div class="d-flex contact-detail align-items-center mt-3 justify-content-center">
