--- a/project-qoawam.html
+++ b/project-qoawam.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="قّوام يبتكر فساتين سهرة مخصصة لمرضى الجنف بدمج الدعامة الطبية ضمن تصميم أنيق وعملي." >
         <meta name="keywords" content="قوام، أزياء طبية، جنف، تصميم سعودي">
-        <meta name="author" content="نوره خليل القحطاني، ليان خالد باقازي">
+        <meta name="author" content="نوره القحطاني، ليان باقازي">
 
         <link rel="shortcut icon" href="assets/images/favicon.ico">
         <link href="assets/libs/tiny-slider/tiny-slider.css" rel="stylesheet">
@@ -157,7 +157,7 @@
                                 </div>
                                 <div class="flex-1 content text-start">
                                     <h6 class="title fw-bold mb-0">أسماء المصممتين</h6>
-                                    <span class="text-primary">نوره خليل القحطاني · ليان خالد باقازي</span>
+                                    <span class="text-primary">نوره القحطاني · ليان باقازي</span>
                                 </div>
                             </div>
                             <div class="d-flex contact-detail align-items-center mt-3 justify-content-center">
