--- a/project-rawayat-alrayah.html
+++ b/project-rawayat-alrayah.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="رواية الراية تعكس المشاعر المصاحبة لمراحل توحيد المملكة عبر أزياء استعراضية سينمائية." >
         <meta name="keywords" content="رواية الراية، توحيد المملكة، أزياء استعراضية، تصميم سعودي">
-        <meta name="author" content="سارة آل ظافر، رهام الرويلي">
+        <meta name="author" content="سارة ظافر، رهام الرويلي">
 
         <link rel="shortcut icon" href="assets/images/favicon.ico">
         <link href="assets/libs/tiny-slider/tiny-slider.css" rel="stylesheet">
@@ -157,7 +157,7 @@
                                 </div>
                                 <div class="flex-1 content text-start">
                                     <h6 class="title fw-bold mb-0">أسماء المصممتين</h6>
-                                    <span class="text-primary">سارة آل ظافر · رهام الرويلي</span>
+                                    <span class="text-primary">سارة ظافر · رهام الرويلي</span>
                                 </div>
                             </div>
                             <div class="d-flex contact-detail align-items-center mt-3 justify-content-center">
