--- a/project-terhab.html
+++ b/project-terhab.html
@@ -157,7 +157,7 @@
                                 </div>
                                 <div class="flex-1 content text-start">
                                     <h6 class="title fw-bold mb-0">أسماء المصممتين</h6>
-                                    <span class="text-primary">رغد عبدالرحمن أبوقيان · ريما محمد الشريف</span>
+                                    <span class="text-primary">رغد أبوقيان · ريما الشريف</span>
                                 </div>
                             </div>
                             <div class="d-flex contact-detail align-items-center mt-3 justify-content-center">
