--- a/project-ahzojah.html
+++ b/project-ahzojah.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="أهزوجة تترجم أصالة العرضة النجدية إلى أزياء معاصرة تحمل الهيبة ذاتها في الاحتفالات الحديثة.">
         <meta name="keywords" content="أهزوجة، العرضة النجدية، أزياء استعراضية، تصميم سعودي">
-        <meta name="author" content="أمجاد أحمد باوزير، شريفه منصور المبارك">
+        <meta name="author" content="أمجاد باوزير، شريفه المبارك">
 
         <link rel="shortcut icon" href="assets/images/favicon.ico">
         <link href="assets/libs/tiny-slider/tiny-slider.css" rel="stylesheet">
@@ -157,7 +157,7 @@
                                 </div>
                                 <div class="flex-1 content text-start">
                                     <h6 class="title fw-bold mb-0">أسماء المصممتين</h6>
-                                    <span class="text-primary">أمجاد أحمد باوزير · شريفه منصور المبارك</span>
+                                    <span class="text-primary">أمجاد باوزير · شريفه المبارك</span>
                                 </div>
                             </div>
                             <div class="d-flex contact-detail align-items-center mt-3 justify-content-center">
