--- a/project-arabesque.html
+++ b/project-arabesque.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="أرابيسك يحول جماليات المسجد النبوي إلى أزياء عصرية تجمع الأصالة بالحداثة." >
         <meta name="keywords" content="أرابيسك، المسجد النبوي، أزياء سعودية، عمارة إسلامية">
-        <meta name="author" content="الهنوف آل حمد، وسن آل روق">
+        <meta name="author" content="الهنوف حمد، وسن روق">
 
         <link rel="shortcut icon" href="assets/images/favicon.ico">
         <link href="assets/libs/tiny-slider/tiny-slider.css" rel="stylesheet">
@@ -157,7 +157,7 @@
                                 </div>
                                 <div class="flex-1 content text-start">
                                     <h6 class="title fw-bold mb-0">أسماء المصممتين</h6>
-                                    <span class="text-primary">الهنوف آل حمد · وسن آل روق</span>
+                                    <span class="text-primary">الهنوف حمد · وسن روق</span>
                                 </div>
                             </div>
                             <div class="d-flex contact-detail align-items-center mt-3 justify-content-center">
