--- a/project-eclav.html
+++ b/project-eclav.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Éclav يقدم أزياء نسائية مستوحاة من زهرة الخزامى بتدرجاتها الهادئة وتقنية الريزن الفنية.">
         <meta name="keywords" content="Éclav، زهرة الخزامى، تصميم سعودي، أزياء نسائية">
-        <meta name="author" content="أثير مجرشي، ديم آل محمد">
+        <meta name="author" content="أثير مجرشي، ديم محمد">
 
         <link rel="shortcut icon" href="assets/images/favicon.ico">
         <link href="assets/libs/tiny-slider/tiny-slider.css" rel="stylesheet">
@@ -157,7 +157,7 @@
                                 </div>
                                 <div class="flex-1 content text-start">
                                     <h6 class="title fw-bold mb-0">أسماء المصممتين</h6>
-                                    <span class="text-primary">أثير مجرشي · ديم آل محمد</span>
+                                    <span class="text-primary">أثير مجرشي · ديم محمد</span>
                                 </div>
                             </div>
                             <div class="d-flex contact-detail align-items-center mt-3 justify-content-center">
