--- a/project-hanaya.html
+++ b/project-hanaya.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="حنايا تستلهم دفء مزارع القصيم لتقدم أزياء تعكس الحنان والارتباط بالجذور." >
         <meta name="keywords" content="حنايا، مزارع القصيم، أزياء سعودية، دفء الطبيعة">
-        <meta name="author" content="ليان خالد الشبرمي">
+        <meta name="author" content="ليان الشبرمي">
 
         <link rel="shortcut icon" href="assets/images/favicon.ico">
         <link href="assets/libs/tiny-slider/tiny-slider.css" rel="stylesheet">
@@ -150,7 +150,7 @@
                     <div class="col-lg-8 col-md-10">
                         <div class="title-heading text-center">
                             <h4 class="mb-4">معلومات الاتصال</h4>
-                            <p class="text-muted">للتواصل مع المصممة ليان خالد الشبرمي استخدمي التفاصيل أدناه.</p>
+                            <p class="text-muted">للتواصل مع المصممة ليان الشبرمي استخدمي التفاصيل أدناه.</p>
                             <div class="d-flex contact-detail align-items-center mt-4 justify-content-center">
                                 <div class="icon">
                                     <i class="uil uil-phone fea icon-m-md text-dark me-3"></i>
