--- a/project-saraa-tharaa.html
+++ b/project-saraa-tharaa.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="SARAA&amp;THARAA تحتفي بالهوية السعودية عبر مزج الزخارف النجدية والعسيرية في أزياء معاصرة فاخرة.">
         <meta name="keywords" content="SARAA&amp;THARAA، أزياء سعودية، زخارف نجدية، زخارف عسيرية">
-        <meta name="author" content="هوازن نواف الدلبحي، عروب محمد البريدي">
+        <meta name="author" content="هوازن الدلبحي، عروب البريدي">
 
         <link rel="shortcut icon" href="assets/images/favicon.ico">
         <link href="assets/libs/tiny-slider/tiny-slider.css" rel="stylesheet">
@@ -157,7 +157,7 @@
                                 </div>
                                 <div class="flex-1 content text-start">
                                     <h6 class="title fw-bold mb-0">أسماء المصممتين</h6>
-                                    <span class="text-primary">هوازن نواف الدلبحي · عروب محمد البريدي</span>
+                                    <span class="text-primary">هوازن الدلبحي · عروب البريدي</span>
                                 </div>
                             </div>
                             <div class="d-flex contact-detail align-items-center mt-3 justify-content-center">
