--- a/project-sarmadan.html
+++ b/project-sarmadan.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Sarmadan يعيد إحياء الحكايات والأساطير السعودية في أزياء مسرحية فنية تنبض بالحبر الذكي.">
         <meta name="keywords" content="Sarmadan، حكايات شعبية، أزياء مسرحية، تصميم سعودي">
-        <meta name="author" content="الدانه بن فهيد، لجين آل زاحم">
+        <meta name="author" content="الدانه فهيد، لجين زاحم">
 
         <link rel="shortcut icon" href="assets/images/favicon.ico">
         <link href="assets/libs/tiny-slider/tiny-slider.css" rel="stylesheet">
@@ -157,7 +157,7 @@
                                 </div>
                                 <div class="flex-1 content text-start">
                                     <h6 class="title fw-bold mb-0">أسماء المصممتين</h6>
-                                    <span class="text-primary">الدانه بن فهيد · لجين آل زاحم</span>
+                                    <span class="text-primary">الدانه فهيد · لجين زاحم</span>
                                 </div>
                             </div>
                             <div class="d-flex contact-detail align-items-center mt-3 justify-content-center">
